--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.TeachUaV20"
-        android:name=".App">
+        android:name=".app.App">
         <activity
             android:name=".MainActivity"
             android:exported="true"
