--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,19 +52,27 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2'
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
-    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.3'
     implementation 'com.github.bumptech.glide:glide:4.13.0'
     implementation 'com.github.corouteam:GlideToVectorYou:v2.0.0'
+
     implementation 'com.github.denzcoskun:ImageSlideshow:0.1.0'
+
     implementation 'androidx.paging:paging-runtime-ktx:3.1.1'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+
     //noinspection GradleCompatible
     annotationProcessor 'com.github.bumptech.glide:compiler:4.13.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    //internet
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.3'
+    implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+
+
 
     //hilt
     implementation "com.google.dagger:hilt-android:2.41"
