returned previous design, implemented all views for task fragment, fixed search, fixed bug with categories, added loading progress bar for all screens

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.TeachUaV20"
+        android:theme="@style/Theme.TeachUaV20.NoActionBar"
         android:name=".app.App">
         <activity
             android:name=".MainActivity"
