--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,7 @@ android {
 
 dependencies {
 
+
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
@@ -89,7 +90,7 @@ dependencies {
     //hilt
     implementation "com.google.dagger:hilt-android:2.41"
     kapt "com.google.dagger:hilt-compiler:2.41"
-    implementation 'com.google.android.material:material:1.5.0'
+    implementation 'com.google.android.material:material:1.6.0'
     implementation "androidx.hilt:hilt-navigation-compose:1.0.0"
 
 
@@ -101,4 +102,6 @@ dependencies {
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
     //image loader for compose
     implementation('io.coil-kt:coil-compose:2.0.0-rc03')
+    implementation "io.coil-kt:coil-svg:2.0.0-rc03"
+
 }
