--- a/app/build.gradle
+++ b/app/build.gradle
@@ -85,6 +85,9 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
 
+    //parse html
+    implementation 'org.jsoup:jsoup:1.14.3'
+
 
 
     //hilt
