--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,8 @@
         android:theme="@style/Theme.TeachUaV20.NoActionBar"
         android:name=".app.App">
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.MainActivity"
             android:exported="true"
-            android:label="@string/app_name"
             android:theme="@style/Theme.TeachUaV20.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
