--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,8 +10,15 @@ plugins {
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
+
 android {
     compileSdk 32
+
+    testOptions {
+        unitTests.all {
+            useJUnitPlatform()
+        }
+    }
 
     defaultConfig {
         applicationId "com.softserve.teachua"
@@ -72,12 +79,18 @@ dependencies {
     implementation 'com.github.denzcoskun:ImageSlideshow:0.1.0'
 
     implementation 'androidx.paging:paging-runtime-ktx:3.1.1'
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'\
+
+    //testing
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.0-M1'
+    testImplementation 'io.kotlintest:kotlintest-runner-junit5:3.3.2'
+    implementation group: 'org.slf4j', name: 'slf4j-api', version: '2.0.0-alpha7'
+    testImplementation("org.slf4j:slf4j-simple:2.0.0-alpha7")
+
+
 
     //noinspection GradleCompatible
     annotationProcessor 'com.github.bumptech.glide:compiler:4.13.0'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     //internet
@@ -96,15 +109,5 @@ dependencies {
     implementation 'com.google.android.material:material:1.6.0'
     implementation "androidx.hilt:hilt-navigation-compose:1.0.0"
 
-
-    //composable
-    implementation "androidx.compose.ui:ui:$compose_version"
-    implementation "androidx.compose.material:material:$compose_version"
-    implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
-    androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
-    debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
-    //image loader for compose
-    implementation('io.coil-kt:coil-compose:2.0.0-rc03')
-    implementation "io.coil-kt:coil-svg:2.0.0-rc03"
 
 }
