--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,7 +69,9 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.4.2'
     implementation 'androidx.navigation:navigation-ui-ktx:2.4.2'
+
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
+
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.1'
     implementation 'com.squareup.picasso:picasso:2.71828'
@@ -79,7 +81,7 @@ dependencies {
     implementation 'com.github.denzcoskun:ImageSlideshow:0.1.0'
 
     implementation 'androidx.paging:paging-runtime-ktx:3.1.1'
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'\
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
     //testing
     testImplementation 'org.junit.jupiter:junit-jupiter:5.9.0-M1'
